--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hoek": "^5.0.3",
     "ng2-charts": "^1.6.0",
     "rxjs": "^6.0.0",
+    "sweetalert": "^2.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
